--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,26 +2,26 @@ project:
   type: website
   pre-render: wget -nc https://raw.githubusercontent.com/lmu-osc/branding-resources/refs/heads/main/lmu-osc-custom.scss
   post-render: rm lmu-osc-custom.scss
-  
+
 
 website:
-  title: "TUTORIAL TITLE HERE"
-  page-footer: 
+  title: "OSC Manual"
+  page-footer:
     center: "Copyright, 2024 Open Science Center at LMU Munich"
     border: false
   search:
     location: sidebar
-  repo-url: https://github.com/lmu-osc/REPO-NAME-HERE
+  repo-url: https://github.com/lmu-osc/manual
   repo-actions: [edit, issue]
   back-to-top-navigation: true
   page-navigation: true
   favicon: assets/LMU_OSC_favicon.jpg
   margin-header: |
     ![](/assets/LMU_OSC_logo.jpg){width="175"}
-  
-  
+
+
   navbar:
-    right: 
+    right:
       - about.qmd
     left:
       - href: index.qmd
@@ -30,41 +30,41 @@ website:
       - icon: github
         menu:
           - text: Source Code
-            url:  https://github.com/lmu-osc/REPO-NAME-HERE
+            url:  https://github.com/lmu-osc/manual
           - text: Report a Bug
-            url:  https://github.com/lmu-osc/REPO-NAME-HERE/issues
+            url:  https://github.com/lmu-osc/manual/issues
       - icon: house-heart
         url: https://www.osc.uni-muenchen.de/index.html
-   
-        
+
+
   sidebar:
     style: "docked"
     contents:
-      - text: "Overview"
+      - text: "Home"
         href: index.qmd
-      - section: "TOPIC 1"
+      - section: "About"
         contents:
-          - href: TOPIC1/page1.qmd
+          - href: about/page1.qmd
             text: "TOPIC1 Page1 Title"
-          - href: TOPIC1/page2.qmd
+          - href: about/page2.qmd
             text: "TOPIC1 Page2 Title"
-      - section: "TOPIC 2"
+      - section: "New Hires"
         contents:
-          - href: TOPIC2/page1.qmd
+          - href: new_staff/page1.qmd
             text: "TOPIC2 Page1 Title"
-          - href: TOPIC2/page2.qmd
+          - href: new_staff/page2.qmd
             text: "TOPIC2 Page2 Title"
-          - href: TOPIC2/page3.qmd
+          - href: new_staff/page3.qmd
             text: "TOPIC2 Page3 Title"
 
 
 
 format:
   html:
-    theme: 
+    theme:
       - cosmo
       - lmu-osc-custom.scss
-    css: 
+    css:
       - https://raw.githubusercontent.com/lmu-osc/branding-resources/refs/heads/main/lmu-osc-styles.css
     toc: true
     fontsize: 13pt
