--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,12 +42,27 @@ website:
     contents:
       - text: "Home"
         href: index.qmd
+
       - section: "About"
         contents:
           - href: about/page1.qmd
             text: "TOPIC1 Page1 Title"
           - href: about/page2.qmd
             text: "TOPIC1 Page2 Title"
+
+      - section: "Membership"
+        contents:
+          - href: membership/page1.qmd
+            text: "General Information"
+          - href: membership/page1.qmd
+            text: "Professors and Postdocs"
+          - href: membership/page2.qmd
+            text: "PhD Students and Postgraduates"
+          - href: membership/page3.qmd
+            text: "Masters and Bachelors"
+          - href: membership/page4.qmd
+            text: "HiWis (Student Assistants)"
+
       - section: "Onboarding"
         contents:
           - href: new_staff/page1.qmd
@@ -66,6 +81,8 @@ website:
           - href: github/page3.qmd
             text: "Repository Overview"
           - href: github/page4.qmd
+            text: "Resource Repos"
+          - href: github/page4.qmd
             text: "What are GitHub Actions?"
           - href: github/page4.qmd
             text: "Pull Requests and Issues"
@@ -73,6 +90,7 @@ website:
             text: "Zenodo Integration"
           - href: github/page4.qmd
             text: "Citations and Licenses"
+
       - section: "GitLab"
         contents:
           - href: gitlab/page1.qmd
@@ -81,6 +99,7 @@ website:
             text: "Repository Overview"
           - href: gitlab/page2.qmd
             text: "Web Hosting?"
+
       - section: "Authoring Tutorials"
         contents:
           - href: authoring_tutorials/page1.qmd
