--- a/_quarto.yml
+++ b/_quarto.yml
@@ -51,72 +51,106 @@ website:
           - href: about/page2.qmd
             text: "TOPIC1 Page2 Title"
 
-      - section: "Membership"
-        contents:
-          - href: membership/page1.qmd
-            text: "General Information"
-          - href: membership/page1.qmd
-            text: "Professors and Postdocs"
-          - href: membership/page2.qmd
-            text: "PhD Students and Postgraduates"
-          - href: membership/page3.qmd
-            text: "Masters and Bachelors"
-          - href: membership/page4.qmd
-            text: "HiWis (Student Assistants)"
-
       - section: "Staff Onboarding"
         contents:
-          - href: new_staff/page1.qmd
-            text: "TOPIC2 Page1 Title"
-          - href: new_staff/page2.qmd
-            text: "TOPIC2 Page2 Title"
-          - href: new_staff/page3.qmd
-            text: "TOPIC2 Page3 Title"
-
-      - section: "GitHub Organization"
+          - href: staff_onboarding/internal_communication.qmd
+            text: "Internal Communication"
+          - href: staff_onboarding/working_envi.qmd
+            text: "Working Environment"
+          - href: staff_onboarding/administration.qmd
+            text: "Administration"
+    
+      - section: "OSC GitHub Organization"
         contents:
-          - href: github/page1.qmd
-            text: "About out GitHub Organization"
-          - href: github/page2.qmd
-            text: "Essential git Skills"
-          - href: github/page3.qmd
+          - href: path/file.qmd
+            text: "About GitHub Organization"
+          - href: path/file.qmd
+            text: "Essential Git Skills"
+          - href: path/file.qmd
             text: "Repository Overview"
-          - href: github/page4.qmd
+          - href: path/file.qmd
             text: "Resource Repos"
-          - href: github/page4.qmd
+          - href: path/file.qmd
             text: "What are GitHub Actions?"
-          - href: github/page4.qmd
+          - href: path/file.qmd
             text: "Pull Requests and Issues"
-          - href: github/page4.qmd
+          - href: path/file.qmd
             text: "Zenodo Integration"
-          - href: github/page4.qmd
+          - href: path/file.qmd
             text: "Citations and Licenses"
-
-      - section: "LRZ GitLab"
+    
+      - section: "Updating Website" #with Fiona for now
         contents:
-          - href: gitlab/page1.qmd
-            text: "The LRZ GitLab"
-          - href: gitlab/page2.qmd
-            text: "Repository Overview"
-          - href: gitlab/page2.qmd
-            text: "Web Hosting?"
-
-      - section: "Authoring Tutorials"
+          - href: updating_website/using_fiona.qmd
+            text: "Using Fiona"
+          - href: updating_website/create_news_item.qmd
+            text: "Create a News Item"
+          - href: updating_website/create_event_page.qmd
+            text: "Create an Event Page"
+          - href: updating_website/create_new_members_page.qmd
+            text: "Create a Profile Page"
+          - href: .qmd
+            text: "Edit Other Pages"
+ 
+      - section: "Onboarding an OSC Member"
         contents:
-          - href: authoring_tutorials/introduction.qmd
+          - href: onboarding_member/onboarding_osc_member.qmd
+            text: "Onboarding an OSC Member"
+  
+      - section: "Organizing an OSC Event"
+        contents:
+          - href: osc_events/creating_program.qmd
+            text: "Creating a Program and Liaising with Guest Instructor"
+          - href: osc_events/registration.qmd
+            text: "Registration and OSC Event Pages"
+          - href: osc_events/liaising_with_attendees.qmd
+            text: "Liaising with Attendees"
+          - href: osc_events/additional_prep.qmd
+            text: "Additional Preparation"
+          - href: osc_events/logistics.qmd
+            text: "Logistics within the Event"
+          - href: osc_events/wrapup_feedback.qmd
+            text: "Wrap Up and Feedback"
+      - section: "OSC Public Outreach"
+        contents:
+          - href: osc_outreach/social_media.qmd
+            text: "Social Media"
+          - href: osc_outreach/newsletter.qmd
+            text: "Newsletter"
+          - href: osc_outreach/flyer_design_and_images.qmd
+            text: "Flyer Design and Images"
+          - href: osc_events/additional_prep.qmd
+            text: "Mail Drafts"
+  
+      - section: "Authoring an OSC Tutorial"
+        contents:
+          - href: path/file.qmd
             text: "Introduction"
-          - href: authoring_tutorials/tutorial_template_repo.qmd
+          - href: path/file.qmd
             text: "Tutorial Template Overview"
-          - href: authoring_tutorials/getting_started.qmd
+          - href: path/file.qmd
             text: "Getting Started"
-          - href: authoring_tutorials/things_you_should_not_change.qmd
-            text: "Things You Shouldn't change"
-          - href: authoring_tutorials/matomo_analytics.qmd
+          - href: path/file.qmd
+            text: "Things You Shouldn't Change"
+          - href: path/file.qmd
             text: "Matomo Analytics"
-          - href: authoring_tutorials/authoring_and_versions.qmd
+          - href: path/file.qmd
             text: "Authoring and Versions"
-          - href: authoring_tutorials/best_practices.qmd
+          - href: path/file.qmd
             text: "Best Practices"
+    
+      - section: "Switching a Group to Open Research Practices"
+        contents:
+          - href: path/file.qmd
+            text: "Survey"
+          - href: path/file.qmd
+            text: "Template Google Doc"
+          - href: path/file.qmd
+            text: "Feedback Form"
+          - href: path/file.qmd
+            text: "Additional Processes"
+          - href: path/file.qmd
+            text: "Lessons Learned and Iterative Improvements"
 
 
 
